Pointers refactoring